--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,9 +1,14 @@
 <div class="container mx-auto">
-  <h1 class="text-2xl font-bold mb-5 text-center">Reports</h1>
+  <h1 class="text-center text-3xl leading-9 font-extrabold text-gray-900 mb-5">Reports</h1>
   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
     <% @reports.each do |report| %>
       <div class="bg-white shadow-md rounded-lg p-6">
-        <h2 class="text-xl font-semibold mb-2"><%= report.title %></h2>
+        <div class="flex items-center me-2">
+            <% if report.user.image.attached? %>
+                <%= image_tag report.user.image, class: "rounded-full w-12 h-12" %>
+              <% end %>
+          <h2 class="text-xl font-semibold mb-2 ml-3"><%= report.title %></h2>
+        </div>
         <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= report.description %></p>
         <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= report.category.category %></p>
         <p class="text-gray-700"><strong>Endereço:</strong> <%= report.address.street %>, <%= report.address.neighbhood %></p>
