--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,24 +6,35 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <%= stylesheet_link_tag "tailwind", "inter-font", "data-turbo-track": "reload" %>
-
     <%= stylesheet_link_tag "application", "data-turbo-track": "reload" %>
     <%= javascript_importmap_tags %>
   </head>
-
   <body class="bg-gray-100">
+    <nav class="bg-white fixed w-full z-20 top-0 start-0">
+      <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
+        <a href="http://127.0.0.1:3000/" class="flex items-center space-x-3 rtl:space-x-reverse">
+          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">Reporta Cotia</span>
+        </a>
+        
+        <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
+                                
+          <% if user_signed_in? %>
+            <% if current_user.image.attached? %>
+              <%= image_tag(current_user.image, class: "rounded-full w-12 h-12") %>
+            <% end %>
+            <%= button_to "Profile", edit_user_registration_path, method: :get, data: { turbo_method: :get }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
+            <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
+          <% else %>
+            <div class="flex space-x-3">
+              <%= link_to "Login", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
+              <%= link_to "Sign up", new_user_registration_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </nav>
     <p class="notice text-green-600"><%= notice %></p>
     <p class="alert text-red-600"><%= alert %></p>
-
-    <div class="flex justify-end space-x-4 p-4">
-      <% if user_signed_in? %>
-        <%= button_to "Log out", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500" %>
-      <% else %>
-        <%= link_to "Login", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500" %>
-        <%= link_to "Sign up", new_user_registration_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500" %>
-      <% end %>
-    </div>
-
     <main class="container mx-auto mt-28 px-5 flex">
       <%= yield %>
     </main>
