--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -30,6 +30,11 @@
       </div>
 
       <div class="mb-4">
+        <%= form.label :images, "Attach Images" %>
+        <%= form.file_field :images, multiple: true, direct_upload: true %>
+      </div>
+
+      <div class="mb-4">
         <%= form.label :address_id, "Endereço", class: "block text-gray-700 font-bold mb-2" %>
         <%= form.collection_select :address_id, Address.all, :id, :street, {}, class: "shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" %>
       </div>
