--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -1,35 +1,40 @@
 <div class="container mx-auto">
   <h1 class="text-center text-3xl leading-9 font-extrabold text-gray-900 mb-5">Reports</h1>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
-    <% @reports.each do |report| %>
-      <div class="bg-white shadow-md rounded-lg p-6">
-        <div class="flex items-center me-2">
-          <% if report.user.image.attached? %>
-            <%= image_tag report.user.image, class: "rounded-full w-12 h-12" %>
+
+  <div class="flex flex-col lg:flex-row gap-4 ">
+    <div class="lg:w-1/4">
+      <%= render "filters" %>
+    </div>
+    <div class="lg:w-3/4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
+      <% @reports.each do |report| %>
+        <div class="bg-white shadow-md rounded-lg p-6">
+          <div class="flex items-center mb-2">
+            <% if report.user.image.attached? %>
+              <%= image_tag report.user.image, class: "rounded-full w-12 h-12" %>
+            <% end %>
+            <h2 class="text-xl font-semibold mb-2 ml-3"><%= report.title %></h2>
+          </div>
+          <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= report.description %></p>
+          <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= report.category.category %></p>
+          <p class="text-gray-700"><strong>Endereço:</strong> <%= report.address.street %>, <%= report.address.neighbhood %></p>
+          
+          <% if report.images.attached? %>
+            <div class="flex space-x-4 mt-4">
+              <% report.images.first(3).each do |image| %>
+                <%= image_tag image.variant(resize_to_limit: [150, 150]), class: "w-24 h-24 object-cover rounded" %>
+              <% end %>
+            </div>
           <% end %>
-          <h2 class="text-xl font-semibold mb-2 ml-3"><%= report.title %></h2>
-        </div>
-        <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= report.description %></p>
-        <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= report.category.category %></p>
-        <p class="text-gray-700"><strong>Endereço:</strong> <%= report.address.street %>, <%= report.address.neighbhood %></p>
-        
-        <% if report.images.attached? %>
-          <div class="flex space-x-4 mt-4">
-            <% report.images.first(3).each do |image| %>
-              <%= image_tag image.variant(resize_to_limit: [150, 150]), class: "w-24 h-24 object-cover rounded" %>
+
+          <div class="flex items-center justify-between mt-4">
+            <p><%= link_to "Ver Mais", report_path(report), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %></p>
+            <% if report.user == current_user %>
+              <%= link_to "Editar", edit_report_path(report), class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline ml-4" %>
             <% end %>
           </div>
-        <% end %>
-
-        <div class="flex items-center justify-between mt-4">
-          <p><%= link_to "Ver Mais", report_path(report), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %></p>
-          <% if report.user == current_user %>
-            <%= link_to "Editar", edit_report_path(report), class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline ml-4" %>
-          <% end %>
         </div>
-      </div>
-    <% end %>
+      <% end %>
+    </div>
   </div>
   <div class="mb-5"></div>
-  <%= link_to "Novo", new_report_path, class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
 </div>
