--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -7,22 +7,34 @@
     </div>
     <div class="lg:w-3/4 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-4">
       <% @reports.each do |report| %>
-        <div class="bg-white shadow-md rounded-lg p-6">
-          <div class="flex items-center mb-2">
-            <% if report.user.image.attached? %>
-              <%= image_tag report.user.image, class: "rounded-full w-12 h-12" %>
-            <% end %>
-            <h2 class="text-xl font-semibold mb-2 ml-3"><%= report.title %></h2>
+        <div class="bg-white shadow-md rounded-lg p-6 w-full h-96 flex flex-col justify-between">
+          <div>
+            <div class="flex items-center mb-2">
+              <div class="w-12 h-12 flex-shrink-0">
+                <% if report.user.image.attached? %>
+                  <%= image_tag report.user.image, class: "rounded-full w-12 h-12" %>
+                <% else %>
+                  <div class="rounded-full w-12 h-12 bg-gray-200"></div>
+                <% end %>
+              </div>
+              <h2 class="text-xl font-semibold mb-2 ml-3"><%= truncate(report.title, length: 25) %></h2>
+            </div>
+            <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= truncate(report.description, length: 25) %></p>
+            <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= truncate(report.category.category, length: 25) %></p>
+            <p class="text-gray-700"><strong>Localização:</strong> <%= truncate(report.address.neighbhood, length: 25) %></p>
           </div>
-          <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= report.description %></p>
-          <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= report.category.category %></p>
-          <p class="text-gray-700"><strong>Endereço:</strong> <%= report.address.street %>, <%= report.address.neighbhood %></p>
           
           <% if report.images.attached? %>
             <div class="flex space-x-4 mt-4">
               <% report.images.first(3).each do |image| %>
                 <%= image_tag image.variant(resize_to_limit: [150, 150]), class: "w-24 h-24 object-cover rounded" %>
               <% end %>
+            </div>
+          <% else %>
+            <div class="flex space-x-4 mt-4 h-24">
+              <div class="w-24 h-24 bg-gray-200 rounded"></div>
+              <div class="w-24 h-24 bg-gray-200 rounded"></div>
+              <div class="w-24 h-24 bg-gray-200 rounded"></div>
             </div>
           <% end %>
 
@@ -36,5 +48,4 @@
       <% end %>
     </div>
   </div>
-  <div class="mb-5"></div>
 </div>
