--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
     <nav class="bg-white fixed w-full z-20 top-0 start-0">
       <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
         <a href="http://127.0.0.1:3000/" class="flex items-center space-x-3 rtl:space-x-reverse">
-          <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-black">Reporta Cotia</span>
+          <span class="self-center text-2xl font-semibold whitespace-nowrap text-black">Reporta Cotia</span>
         </a>
         
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -22,11 +22,11 @@
             <% if current_user.image.attached? %>
               <%= image_tag(current_user.image, class: "rounded-full w-12 h-12") %>
             <% end %>
-            <%= button_to "Perfil", edit_user_registration_path, method: :get, data: { turbo_method: :get }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
+            <%= button_to "Perfil", edit_user_registration_path, method: :get, data: { turbo_method: :get }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 ml-3" %>
             <%= button_to "Sair", destroy_user_session_path, method: :delete, data: { turbo_method: :delete }, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-red-600 hover:bg-red-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
           <% else %>
             <div class="flex space-x-3">
-              <%= link_to "Entrar", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-red-500 ml-3" %>
+              <%= link_to "Entrar", new_user_session_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500 ml-3" %>
               <%= link_to "Cadastrar", new_user_registration_path, class: "inline-flex items-center px-4 py-2 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500 ml-3" %>
             </div>
           <% end %>
