--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,7 +17,6 @@
         </a>
         
         <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
-                                
           <% if user_signed_in? %>
             <% if current_user.image.attached? %>
               <%= image_tag(current_user.image, class: "rounded-full w-12 h-12") %>
@@ -33,9 +32,9 @@
         </div>
       </div>
     </nav>
-    <p class="notice text-green-600"><%= notice %></p>
-    <p class="alert text-red-600"><%= alert %></p>
-    <main class="container mx-auto mt-28 px-5 flex">
+    <main class="container mx-auto mt-28 px-5 flex flex-col space-y-4">
+      <p class="notice text-green-600"><%= notice %></p>
+      <p class="alert text-red-600"><%= alert %></p>
       <%= yield %>
     </main>
   </body>
