--- a/app/views/reports/index.html.erb
+++ b/app/views/reports/index.html.erb
@@ -22,6 +22,7 @@
             <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= truncate(report.description, length: 25) %></p>
             <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= truncate(report.category.category, length: 25) %></p>
             <p class="text-gray-700"><strong>Localização:</strong> <%= truncate(report.address.neighbhood, length: 25) %></p>
+            <p class="text-gray-700"><strong>Status:</strong> <%= I18n.t("report_status.#{report.status}") %></p>
           </div>
           
           <% if report.images.attached? %>
