--- a/app/views/reports/new.html.erb
+++ b/app/views/reports/new.html.erb
@@ -1,5 +1,5 @@
 <div class="container mx-auto">
-  <h1 class="text-2xl font-bold mb-5 text-center">Novo Report</h1>
+  <h1 class="text-center text-3xl leading-9 font-extrabold text-gray-900 mb-5">Novo Report</h1>
 
   <div class="bg-white shadow-md rounded-lg p-6 max-w-md mx-auto">
     <%= form_with(model: @report, local: true) do |form| %>
