--- a/app/views/reports/show.html.erb
+++ b/app/views/reports/show.html.erb
@@ -1,17 +1,17 @@
 <div class="container mx-auto">
   <h1 class="text-2xl font-bold mb-5 text-center"><%= @report.title %></h1>
 
-  <div class="bg-white shadow-md rounded-lg p-6 max-w-md mx-auto">
+  <div class="bg-white shadow-md rounded-lg p-6">
     <p class="text-gray-700 mb-2"><strong>Descrição:</strong> <%= @report.description %></p>
     <p class="text-gray-700 mb-2"><strong>Categoria:</strong> <%= @report.category.category %></p>
     <p class="text-gray-700 mb-2"><strong>Endereço:</strong> <%= @report.address.street %>, <%= @report.address.neighbhood %></p>
 
     <% if @report.images.attached? %>
-      <div class="relative mt-4">
+      <div class="relative mt-4 flex justify-center">
         <div class="carousel">
           <% @report.images.each_with_index do |image, index| %>
             <div class="carousel-item <%= "active" if index == 0 %>">
-              <%= image_tag image.variant(resize_to_fill: [400, 300]), class: "w-full h-auto object-cover rounded" %>
+              <%= image_tag image.variant(resize_to_fill: [400, 300]), class: "w-96 h-72 object-cover rounded cursor-pointer" %>
             </div>
           <% end %>
         </div>
@@ -20,8 +20,14 @@
       </div>
     <% end %>
 
-    <div class="mt-4">
+    <div class="relative mt-4 flex justify-center">
       <%= link_to "Voltar", reports_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
+      <% if user_signed_in? %>
+        <%= form_with(model: @report, url: report_path(@report), method: :patch, local: true, class: "flex items-center space-x-4") do |form| %>
+          <%= form.submit "Atualizar status", class: "bg-yellow-500 hover:bg-yellow-700 text-white font-bold py-2 px-4 rounded-full" %>
+          <%= form.select :status, Report.statuses.keys.map { |status| [status.humanize, status] }, {}, class: "block appearance-none bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline" %>
+        <% end %>
+        <% end %>
     </div>
   </div>
 </div>
@@ -50,5 +56,34 @@
     });
 
     showItem(currentIndex);
+
+    items.forEach(item => {
+      item.addEventListener('click', function() {
+        item.classList.toggle('zoomed');
+        document.body.classList.toggle('zoom-active');
+      });
+    });
   });
 </script>
+
+<style>
+  .zoomed {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(2);
+    z-index: 50;
+    transition: transform 0.3s ease-in-out;
+  }
+
+  .zoom-active::before {
+    content: '';
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 40;
+  }
+</style>
