--- a/app/views/reports/_filters.html.erb
+++ b/app/views/reports/_filters.html.erb
@@ -12,7 +12,7 @@
       <%= label_tag :search, "Pesquisar", class: "block text-gray-700 font-bold mb-2" %>
       <%= text_field_tag :search, params[:search], class: "block appearance-none w-full bg-white border border-gray-400 hover:border-gray-500 px-4 py-2 pr-8 rounded shadow leading-tight focus:outline-none focus:shadow-outline" %>
     </div>
-    <%= submit_tag "Filtrar", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
+    <%= submit_tag "Filtrar", class: "cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
     <%= link_to "Novo", new_report_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
   <% end %>
 </div>
