--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,7 +1,7 @@
 <div class="container mx-auto">
   <div class="sm:mx-auto sm:w-full sm:max-w-md">
     <h2 class="text-center text-3xl leading-9 font-extrabold text-gray-900">
-      Edit <%= resource_name.to_s.humanize %>
+      Editar usuário
     </h2>
   </div>
 
@@ -10,7 +10,7 @@
       <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
         <%= render "devise/shared/error_messages", resource: resource %>
         <div class="mt-6">
-          <%= f.label :image, class: "block text-sm font-medium text-gray-700" %>
+          <%= f.label "Foto do perfil", class: "block text-sm font-medium text-gray-700" %>
           <%= f.file_field :image, autofocus: true, autocomplete: "image", class: "mt-1 block w-full px-3 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
         </div>
  
@@ -28,45 +28,45 @@
         <% end %>
 
         <div class="mt-6">
-          <%= f.label :password, class: "block text-sm font-medium leading-5 text-gray-700" %> <i>(leave blank if you don't want to change it)</i>
+          <%= f.label "Senha", class: "block text-sm font-medium leading-5 text-gray-700" %> <i>(deixe em branco se quiser manter a mesma senha)</i>
           <div class="mt-1 rounded-md shadow-sm">
             <%= f.password_field :password, autocomplete: "new-password", class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" %>
           </div>
           <% if @minimum_password_length %>
             <p class="mt-2 text-sm text-gray-500">
-              <em><%= @minimum_password_length %> characters minimum</em>
+              <em>O mínimo é <%= @minimum_password_length %> caracteres</em>
             </p>
           <% end %>
         </div>
 
         <div class="mt-6">
-          <%= f.label :password_confirmation, class: "block text-sm font-medium leading-5 text-gray-700" %>
+          <%= f.label "Digite a senha novamente", class: "block text-sm font-medium leading-5 text-gray-700" %>
           <div class="mt-1 rounded-md shadow-sm">
             <%= f.password_field :password_confirmation, autocomplete: "new-password", class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" %>
           </div>
         </div>
 
         <div class="mt-6">
-          <%= f.label :current_password, class: "block text-sm font-medium leading-5 text-gray-700" %> <i>(we need your current password to confirm your changes)</i>
+          <%= f.label "Senha atual", class: "block text-sm font-medium leading-5 text-gray-700" %> <i>(precisamos da senha atual para confirmar as mudanças)</i>
           <div class="mt-1 rounded-md shadow-sm">
             <%= f.password_field :current_password, autocomplete: "current-password", class: "appearance-none block w-full px-3 py-2 border border-gray-300 rounded-md placeholder-gray-400 focus:outline-none focus:shadow-outline-blue focus:border-blue-300 transition duration-150 ease-in-out sm:text-sm sm:leading-5" %>
           </div>
         </div>
 
         <div class="mt-6">
-          <%= f.submit "Update", class: "w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" %>
+          <%= f.submit "Atualizar", class: "cursor-pointer w-full flex justify-center py-2 px-4 border border-transparent text-sm font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-500 focus:outline-none focus:border-indigo-700 focus:shadow-outline-indigo active:bg-indigo-700 transition duration-150 ease-in-out" %>
         </div>
       <% end %>
 
       <div class="mt-6">
-        <h3 class="text-lg leading-6 font-medium text-gray-900">Cancel my account</h3>
+        <h3 class="text-lg leading-6 font-medium text-gray-900">Cancelar minha conta</h3>
         <div class="mt-2 text-sm leading-5 text-gray-500">
-          Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?", turbo_confirm: "Are you sure?" }, method: :delete, class: "underline text-red-600 hover:text-red-800" %>
+          Calcelar? <%= button_to "Cancelar minha conta", registration_path(resource_name), data: { confirm: "Você tem certeza?", turbo_confirm: "Você tem certeza?" }, method: :delete, class: "underline text-red-600 hover:text-red-800" %>
         </div>
       </div>
 
       <div class="mt-6">
-        <%= link_to "Back", :back, class: "underline text-indigo-600 hover:text-indigo-800" %>
+        <%= link_to "Voltar", :back, class: "underline text-indigo-600 hover:text-indigo-800" %>
       </div>
     </div>
   </div>
