--- a/app/views/reports/edit.html.erb
+++ b/app/views/reports/edit.html.erb
@@ -55,7 +55,7 @@
       <% end %>
 
       <div class="flex items-center justify-between">
-        <%= form.submit "Editar", class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
+        <%= form.submit "Editar", class: "cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
         <%= link_to "Voltar", reports_path, class: "bg-green-500 hover:bg-green-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline ml-4" %>
       </div>
     <% end %>
