--- a/app/views/reports/pending.html.erb
+++ b/app/views/reports/pending.html.erb
@@ -36,7 +36,7 @@
             </td>
             <td class="py-2 px-4 border-b border-gray-200">
               <div class="flex flex-col space-y-2">
-                <%= link_to "Show", report_path(report), class: "bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full" %>
+                <%= link_to "Ver mais", report_path(report), class: "cursor-pointer bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded-full focus:outline-none focus:shadow-outline" %>
               </div>
             </td>
           </tr>
